# rust_studies

./: Cargo.toml  Readme.md
studies/: 01-functions.md  01-variables.md  02-datatype.md  02-variables.md  03-functions.md  03-use.md  04-ownership.md  05-struct.md  06-enum.md  07-mods.md  08-collections.md  09-errors.md  10-traits.md
studies/exercicies/00-geofences/: Cargo.toml
studies/exercicies/00-geofences/src/: main.rs  payload.rs
studies/exercicies/00-minigrep/src/: lib.rs  main.rs
studies/exercicies/00-minihttpserver/: Cargo.toml
studies/exercicies/00-minihttpserver/src/: lib.rs  (+1 more)
studies/exercicies/00-npm-utils/: .yarnrc  Cargo.toml  package.json
studies/exercicies/00-npm-utils/js/test/: bundle.js  package-lock.json  package.json  rollup.config.js
studies/exercicies/00-npm-utils/js/test2/: main.js  package.json
studies/exercicies/00-npm-utils/src/: main.rs
studies/exercicies/00-npm-utils/src/api/: commands.rs
studies/exercicies/00-pendulum/: Cargo.toml
studies/exercicies/00-play_ground/: Cargo.toml
studies/exercicies/00-prisma-cli/: Cargo.toml
studies/exercicies/00-quadtree/: Cargo.toml  index.html  quadtree.js
studies/exercicies/00-request/: Cargo.toml
studies/exercicies/00-request/src/: main.rs
studies/exercicies/00-rest-axum/: Cargo.toml
studies/exercicies/00-rest-crud-axum-prisma/: Cargo.toml
studies/exercicies/00-servertokio/: Cargo.toml
studies/exercicies/05-structs_01/: Cargo.toml
studies/exercicies/07-comunnicator/: Cargo.toml
studies/exercicies/guessing_game/: Cargo.toml
studies/exercicies/play_ground/: Cargo.toml
(+36 files in other folders)
