[package]
name = "geofences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.1", features = ["tokio-comp"] }
serde = { version = "1.0.170", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
warp = "0.3"