[package]
name = "npm-utils"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
dialoguer = "0.10.4"
glob = "0.3.1"
serde = {version = "1.0.181", features = ["derive"]}
serde_json = "1.0.104"
walkdir = "2.3.3"
