[package]
name = "request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
error-chain = "0.12.4"
reqwest = { version= "0.11.16", features = ["blocking", "json"] }
tokio = { version = "1.27.0", features = ["full"] }